[package]
name = "rusty-dca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.0"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
serde_repr = "0.1.9"
axum = "0.5.17"
validator = { version = "0.15", features = ["derive"] }
thiserror = "1.0.37"
